--- a/index.html
+++ b/index.html
@@ -4,9 +4,181 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
+
     <title>Mood Disorders and Suicide</title>
 </head>
 <body>
-    <a href="test.html">SCROLL TEST</a>
+    <section class="hero">
+        <header>
+            <img class="logo" src="mental-health.svg">
+            <a class="button get-help" href="#getting-help">Get Help</a>
+        </header>
+        <div class="hero-text">
+            <h1>Mood Disorders and Suicide</h1>
+            <hr>
+            <a class="button learn-more" href="#mood-disorders">Learn More</a>
+        </div>
+    </section>
+    <div class="hotline">
+        <div class="hotline-content">
+            <img class="call-icon" src="call-icon.svg">
+            <p>If you or someone you know has had suicidal thoughts or displayed any warning signs of suicide, call the suicide lifeline or <a href="https://988lifeline.org/" target="_blank">click here for more info.</a>
+                <br>
+                <a href="tel:+18002738255" class="phone">1-800-273-TALK (8255)</a>
+            </p>
+        </div>
+    </div>
+    <section class="mood-disorders" id="mood-disorders">
+        <div class="group overview">
+            <h2>Mood Disorders</h2>
+            <p>Mood disorders are psychological conditions that affect both the mental and behavioral state of an individual. Those with mood disorders experience emotions that may be inconsistent with their environment that are so extreme that they may negatively impact one's life. Typically, depressive feelings such as persistent sadness, irritability, or hopelessness and manic feelings like excessive happiness or energy are both signs of a mood disorder. Mood disorder is a broad term that includes many more specific conditions such as major depressive disorder, bipolar disorder, seasonal affective disorder (SAD), and persistent depressive disorder (dysthymia).</p>
+        </div>
+        <div class="cards">
+            <a href="major-depression.html"><div class="card">
+                <h5>Learn More:</h5>
+                <h4>Major Depressive Disorder</h4>
+            </div></a>
+            <a href="bipolar-disorder.html"><div class="card">
+                <h5>Learn More:</h5>
+                <h4>Bipolar Disorder</h4>
+            </div></a>
+            <a href="seasonal-affective-disorder.html"><div class="card">
+                <h5>Learn More:</h5>
+                <h4>Seasonal Affective Disorder</h4>
+            </div></a>
+        </div>
+        <div class="group causes">
+            <h3>Causes of Mood Disorders</h3>
+            <p>A number of different factors contribute to mood disorders including biological factors, hormones, inherited traits, life events, and early childhood trauma. Many mood disorders may be caused by abnormal levels of chemicals in the brain while other times stressful life changes may hurt one's mental health. Early childhood trauma is also thought to play a role in mood disorders as stressful events during childhood can permanently change the brain. It is also likely that genetics play a role in one's likelihood of developing a mood disorder.</p>
+        </div>
+        <hr>
+        <div class="group treatments">
+            <h3>Treating Mood Disorders</h3>
+            <p>
+                There are a number of common treatments for various mood disorders. These include both medications as well as different forms of psychotherapy. Types of medications that frequently improve symptoms include:
+                <ul>
+                    <li>Antidepressants</li>
+                    <li>Mood stabilizers</li>
+                    <li>Antipsychotics (neuroleptics)</li>
+                </ul>
+                <p>These drugs are often used in addition to psychotherapies such as:</p>
+                <ul>
+                    <li>Cognitive behavioral therapy (CBT)</li>
+                    <li>Psychodynamic therapy</li>
+                    <li>Interpersonal therapy</li>
+                </ul>
+            </p>
+        </div>
+        <a class="anchor-point" id="getting-help">anchor-point</a>
+        <div class="group help">
+            <h3>Getting Help</h3>
+            <p>If you or someone you know is struggling with their mental health, help is available.</p>
+            <br>
+            <p><b>If someone is in immediate danger, contact emergency services.</b></p>
+            <p><br>
+                <span><a class="clear" href="https://988lifeline.org/" target="_blank">988 Suicide & Crisis Lifeline<img style="filter: brightness(0) invert(1); padding-left: 8px;" src="maximize.png"></a></span><br>
+                Call or text 988 or chat online
+            </p>
+            <p><br>
+                <span><a class="clear" href="https://www.crisistextline.org/text-us/" target="_blank">Crisis Text Line<img style="filter: brightness(0) invert(1); padding-left: 8px;" src="maximize.png"></a></span><br>
+                Text “HELLO” to 741741
+            </p>
+            <p><br>
+                <span>Talk to your primary care doctor.</span><br>
+                Primary care physicians can perform mental health screenings and refer you to a mental health specialist.
+            </p>
+        </div>
+        <div class="stigma highlight">
+            <h3>Mental Illness Stigma</h3>
+            <p>There is a large stigma around mental illnesses in society. Many people think that those suffering from mental illnesses just need to “get over it.” These kinds of stigmas cause those in need of help to keep their problems to themselves because they do not want to appear weak or shameful. Unfortunately, it is very common for people to delay getting medical help for mental conditions that could be making their lives very difficult.</p>
+        </div>
+    </section>
+    <section class="suicide">
+        <div class="group overview">
+            <h2>Suicide</h2>
+            <blockquote cite="https://www.who.int/news/item/09-09-2019-suicide-one-person-dies-every-40-seconds">
+                "Every 40 seconds a person dies of suicide somewhere in the world."
+            </blockquote>
+            <p>Suicide is the act of taking your own life. This is typically a response to a stressful life where an individual feels that they are unable to continue. Unfortunately, thousands die to suicide every year.</p>
+        </div>
+        <div class="group risk">
+            <h3>Risk Factors</h3>
+            <p>
+                There are many factors that affect the chances of suicide in an individual. These include:
+                <ul>
+                    <li>Previous attempts of suicide</li>
+                    <li>Excessive drug or alcohol use</li>
+                    <li>Any mood disorders</li>
+                    <li>Suicidal thoughts</li>
+                    <li>Feelings of hopelessness, worthlessness, or loneliness</li>
+                    <li>Family history of mental disorders</li>
+                </ul>
+            </p>
+        </div>
+        <div class="group warnings double">
+        <div>
+            <h3>Warning Signs</h3>
+            <p>
+                There are often a number of warning signs indicating someone's intentions of suicide. The most common signs include:
+                <ul>
+                    <li>Inability to move on</li>
+                    <li>History of mental illness</li>
+                    <li>Change in personality</li>
+                    <li>Change in behavior</li>
+                    <li>Change in sexual interest</li>
+                    <li>Change in sleep patterns</li>
+                    <li>Claims of suicidal ideation</li>
+                    <li>Indirect claims of suicidal ideation</li>
+                    <li>Final preparations such as writing a will</li>
+                </ul>
+            </p>
+        </div>
+        <aside class="remember">
+            <h5>Remember:</h5>
+            <p>It is crucial that you do not ignore any of these signs. Even those who seem happy may be suffering from depression and thoughts of suicide, so you should never brush off any signs, no matter how small they seem. The decision to take action or simply talk to someone about their mental health could save a life.</p>
+        </aside>
+    </div>
+        <div class="group prevention">
+            <h3>Preventing Suicide</h3>
+            <p>
+                Those who are suicidal do want to live. They just believe that death is the only way to fix their situation. With the right care and actions, suicide can be prevented. Keep in mind the following actions:
+                <ul>
+                    <li>Monitor the warning signals</li>
+                    <li>Don't brush off threats</li>
+                    <li>Tell the person you care</li>
+                    <li>Ask directly</li>
+                    <li>Tell the person’s loved ones</li>
+                </ul>
+            </p>
+        </div>
+    </section>
+    <div class="hotline">
+        <div class="hotline-content">
+            <img class="call-icon" src="call-icon.svg">
+            <p>If you or someone you know has had suicidal thoughts or displayed any warning signs of suicide, call the suicide lifeline or <a href="https://988lifeline.org/" target="_blank">click here for more info.</a>
+                <br>
+                <a href="tel:+18002738255" class="phone">1-800-273-TALK (8255)</a>
+            </p>
+        </div>
+    </div>
+    <footer>
+        <div class="text">
+            <h5>Sources:</h5>
+            <p>
+                “Bipolar Disorder.” Mayo Clinic, Mayo Foundation for Medical Education and Research, 16 Feb. 2021, https://www.mayoclinic.org/diseases-conditions/bipolar-disorder/diagnosis-treatment/drc-20355961. <br><br>
+“Depression (Major Depressive Disorder).” Mayo Clinic, Mayo Foundation for Medical Education and Research, 3 Feb. 2018, https://www.mayoclinic.org/diseases-conditions/depression/symptoms-causes/syc-20356007. <br><br>
+Donatelle, Rebecca J. “Promoting and Preserving Your Psychological Health.” Access to Health, Pearson Education, Inc., Boston, Massachusetts, 2020, pp. 34–47. <br><br>
+“Help for Mental Illnesses.” National Institute of Mental Health, U.S. Department of Health and Human Services, https://www.nimh.nih.gov/health/find-help. <br><br>
+“Major Depressive Disorder - Statpearls - NCBI Bookshelf.” National Library of Medicine, United States Government, 1 June 2022, https://www.ncbi.nlm.nih.gov/books/NBK559078/. <br><br>
+“Mood Disorders.” Johns Hopkins Medicine, https://www.hopkinsmedicine.org/health/conditions-and-diseases/mood-disorders. <br><br>
+“Mood Disorders.” Mayo Clinic, Mayo Foundation for Medical Education and Research, 29 Oct. 2021, https://www.mayoclinic.org/diseases-conditions/mood-disorders/symptoms-causes/syc-20365057. <br><br>
+“Seasonal Affective Disorder (SAD).” Mayo Clinic, Mayo Foundation for Medical Education and Research, 14 Dec. 2021, https://www.mayoclinic.org/diseases-conditions/seasonal-affective-disorder/diagnosis-treatment/drc-20364722. <br><br>
+“Suicide and Suicidal Thoughts.” Mayo Clinic, Mayo Foundation for Medical Education and Research, 19 July 2022, https://www.mayoclinic.org/diseases-conditions/suicide/symptoms-causes/syc-20378048. 
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
